--- a/index.html
+++ b/index.html
@@ -1,1 +1,113 @@
-"Hello World" 
+<!doctype html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta name="description" content="">
+    <meta name="viewport" content="width=device-width,initial-scale=1">
+    <title>Developer | Dennis Fagan</title>
+    <link rel="apple-touch-icon" href="apple-touch-icon.png">
+
+    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+    <link rel="stylesheet" href="styles/vendor.css">
+    <link rel="stylesheet" href="styles/main.css">
+  </head>
+  <body>
+
+    <header class="main-header" role="banner">
+      <a id="skip-navigation" class="show-on-focus button secondary" href="#main-content">Skip Navigation</a>
+      <div class="top-bar">
+        <div class="top-bar-title">
+          <div class="row">
+            <div class="columns">
+              <span data-responsive-toggle="main-navigation" data-hide-for="medium">
+                <button class="menu-icon dark" type="button" data-toggle>
+                  <span class="show-for-sr">Contact</span>
+                </button>
+              </span>
+              <span>Dennis Fagan</span>
+            </div>
+          </div>
+        </div>
+        <div id="main-navigation" class="top-bar-right main-navigation">
+          <nav role="navigation">
+            <ul class="menu vertical medium-horizontal" data-responsive-menu="accordion large-dropdown" data-click-open="true" data-disable-hover="true">
+              <li><a href="https://www.linkedin.com/in/dennistm">Linkedin</a></li>
+              <li><a href="mailto:dennis.jude@gmail.com?subject=I saw your profile on github&body=Hey Dennis,">Email</a></li>
+            </ul>
+          </nav>
+        </div>
+      </div>
+    </header>
+    <main class="main-content" id="main-content">
+      <div class="row carousel">
+        <section class="large-12 columns text-center">
+          <h1>Tech Lead</h1>
+          <h2>PROFICIENCIES</h2>
+          <p>Javascript, HTML5, CSS3, jQuery, Backbone, Angular, Ember, Ionic, Web Standards, Responsive Design, Rapid Prototyping</p>
+          <h3>TECHNICAL EXPERIENCE</h3>
+          <ul>
+            <li>Strong Javascript, JQuery and various MVC javascript frameworks</li>
+            <li>Advanced knowledge of HTML / HTML5 and CSS / CSS3.</li>
+            <li>Developed and Implemented new coding standards and practices.</li>
+            <li>Mentored junior staff and recent graduates.</li>
+            <li>Interviewed and hired junior and intermediate technical staff.</li>
+          </ul>
+        </section>
+        <section class="large-6 columns text-center">
+          <h2>WORK EXPERIENCE</h2>
+          <ul>
+            <li>
+              Critical Mass . (Toront o, ON)
+Senior Developer – Oct. 2013 Present
+Senior developer on the GSDT line of business. This group is tasked with conceptualizing and
+prototyping the next generation of a major financial corporation’s products.
+Developed the process to create live demos for clients in an iterative fashion using agile
+methodologies.
+            </li>
+            <li>
+              Maclaren McCann . (Toront o, ON)
+Senior FrontEnd
+Developer / Creative Technologist – Apr. 2012 Oct.
+2013
+Senior front end developer across 3 lines of business including Wind Mobile, Bayer Crop Science
+and Boehringer Ingelheim.
+Founding member of the creative technologist working group, tasked with researching tech
+solutions for client business needs. These projects included product conception, installations
+and mobile applications.
+            </li>
+          </ul>
+          <h3>Other experience</h3>
+          <ul>
+            <li>
+              Virgin Mobile Canada. (Toronto, ON)
+Senior FrontEnd
+Developer, Marketing Group – Feb 2011 Apr.
+2012
+            </li>
+            <li>
+              Sonic Boom Creative Media. (Toronto, ON)
+FrontEnd
+Developer – May 2009 Feb
+2011
+            </li>
+            <li>
+              Kaboose Inc. (Toronto, ON)
+Contract FrontEnd
+Developer – March 2009May2009
+            </li>
+            <li>
+              Element 42 Design. ( Montreal, QC)
+Web Designer / Developer – July 2006 – March 2009
+            </li>
+          </ul>
+        </section>
+        <section class="large-6 columns text-center">
+          <h2>EDUCATION</h2>
+          <p>Bachelor of Arts May 2007 Concordia University, Montreal, QC</p>
+        </section>
+      </div>
+    </main>
+    <script src="scripts/vendor.js"></script>
+    <script src="scripts/main.js"></script>
+  </body>
+</html>
