--- a/index.html
+++ b/index.html
@@ -12,100 +12,93 @@
     <link rel="stylesheet" href="styles/main.css">
   </head>
   <body>
+    <main class="main-content" id="main-content">
+      <div class="portfolio-resume row">
 
-    <header class="main-header" role="banner">
-      <a id="skip-navigation" class="show-on-focus button secondary" href="#main-content">Skip Navigation</a>
-      <div class="top-bar">
-        <div class="top-bar-title">
-          <div class="row">
-            <div class="columns">
-              <span data-responsive-toggle="main-navigation" data-hide-for="medium">
-                <button class="menu-icon dark" type="button" data-toggle>
-                  <span class="show-for-sr">Contact</span>
-                </button>
-              </span>
-              <span>Dennis Fagan</span>
+        <div class="large-4 columns">
+          <div class="portfolio-resume-wrapper">
+            <img class="portfolio-resume-headshot" src="images/0a84d20.jpg" alt="headshot">
+            <h3 class="portfolio-resume-header">Skills</h3>
+            <ul>
+              <li>Strong Javascript, JQuery and various MVC javascript frameworks</li>
+              <li>Advanced knowledge of HTML / HTML5 and CSS / CSS3.</li>
+              <li>Developed and Implemented new coding standards and practices.</li>
+              <li>Mentored junior staff and recent graduates.</li>
+              <li>Interviewed and hired junior and intermediate technical staff.</li>
+            </ul>
+          </div>
+        </div>
+
+        <div class="large-4 columns">
+          <div class="portfolio-resume-wrapper">
+            <h3 class="portfolio-resume-header">Experience</h3>
+            <div class="portfolio-resume-spacing">
+              <h5><strong>Critical Mass . (Toront o, ON)</strong></h5>
+              <p>Senior Developer – Oct. 2013 Present</p>
+              <ul>
+                <li>Senior developer on the GSDT line of business. This group is tasked with conceptualizing and prototyping the next generation of a major financial corporation’s products.</li>
+                <li>Developed the process to create live demos for clients in an iterative fashion using agile methodologies.</li>
+              </ul>
+            </div>
+            <div class="portfolio-resume-spacing">
+              <h5><strong>Maclaren McCann . (Toront o, ON)</strong></h5>
+              <p>Senior FrontEnd Developer / Creative Technologist – Apr. 2012 Oct. 2013</p>
+              <ul>
+                <li>Senior front end developer across 3 lines of business including Wind Mobile, Bayer Crop Science and Boehringer Ingelheim.</li>
+                <li>Founding member of the creative technologist working group, tasked with researching tech</li>
+                <li>solutions for client business needs. These projects included product conception, installations and mobile applications.</li>
+              </ul>
+            </div>
+
+            <div class="portfolio-resume-spacing">
+              <h5><strong>Other experience</strong></h5>
+              <ul>
+                <li>
+                  Virgin Mobile Canada. (Toronto, ON)
+    Senior FrontEnd
+    Developer, Marketing Group – Feb 2011 Apr.
+    2012
+                </li>
+                <li>
+                  Sonic Boom Creative Media. (Toronto, ON)
+    FrontEnd
+    Developer – May 2009 Feb
+    2011
+                </li>
+                <li>
+                  Kaboose Inc. (Toronto, ON)
+    Contract FrontEnd
+    Developer – March 2009May2009
+                </li>
+                <li>
+                  Element 42 Design. ( Montreal, QC)
+    Web Designer / Developer – July 2006 – March 2009
+                </li>
+              </ul>
             </div>
           </div>
         </div>
-        <div id="main-navigation" class="top-bar-right main-navigation">
-          <nav role="navigation">
-            <ul class="menu vertical medium-horizontal" data-responsive-menu="accordion large-dropdown" data-click-open="true" data-disable-hover="true">
-              <li><a href="https://www.linkedin.com/in/dennistm">Linkedin</a></li>
-              <li><a href="mailto:dennis.jude@gmail.com?subject=I saw your profile on github&body=Hey Dennis,">Email</a></li>
-            </ul>
-          </nav>
+
+        <div class="large-4 columns">
+          <div class="portfolio-resume-wrapper">
+            <h3 class="portfolio-resume-header">About Me</h3>
+            <p>Javascript, HTML5, CSS3, jQuery, Backbone, Angular, Ember, Ionic, Web Standards, Responsive Design, Rapid Prototyping</p>
+            <h3 class="portfolio-resume-header">Education</h3>
+            <p>Bachelor of Arts May 2007 Concordia University, Montreal, QC</p>
+            <div class="portfolio-resume-contact-info">
+              <a href="mailto:dennis.jude@gmail.com?subject=I saw your profile on github&body=Hey Dennis,"><i class="fa fa-envelope" aria-hidden="true"></i>dennis.jude@gmail.com</a>
+            </div>
+            <div class="portfolio-resume-contact-info">
+              <a href="tel:+14083410600"><i class="fa fa-phone" aria-hidden="true"></i></i>555.555.5555</a>
+            </div>
+            <div class="portfolio-resume-contact-info">
+              <a href="https://www.linkedin.com/in/dennistm"><i class="fa fa-linkedin" aria-hidden="true"></i></i>Linkedin</a>
+            </div>
+          </div>
         </div>
+
       </div>
-    </header>
-    <main class="main-content" id="main-content">
-      <div class="row carousel">
-        <section class="large-12 columns text-center">
-          <h1>Tech Lead</h1>
-          <h2>PROFICIENCIES</h2>
-          <p>Javascript, HTML5, CSS3, jQuery, Backbone, Angular, Ember, Ionic, Web Standards, Responsive Design, Rapid Prototyping</p>
-          <h3>TECHNICAL EXPERIENCE</h3>
-          <ul>
-            <li>Strong Javascript, JQuery and various MVC javascript frameworks</li>
-            <li>Advanced knowledge of HTML / HTML5 and CSS / CSS3.</li>
-            <li>Developed and Implemented new coding standards and practices.</li>
-            <li>Mentored junior staff and recent graduates.</li>
-            <li>Interviewed and hired junior and intermediate technical staff.</li>
-          </ul>
-        </section>
-        <section class="large-6 columns text-center">
-          <h2>WORK EXPERIENCE</h2>
-          <ul>
-            <li>
-              Critical Mass . (Toront o, ON)
-Senior Developer – Oct. 2013 Present
-Senior developer on the GSDT line of business. This group is tasked with conceptualizing and
-prototyping the next generation of a major financial corporation’s products.
-Developed the process to create live demos for clients in an iterative fashion using agile
-methodologies.
-            </li>
-            <li>
-              Maclaren McCann . (Toront o, ON)
-Senior FrontEnd
-Developer / Creative Technologist – Apr. 2012 Oct.
-2013
-Senior front end developer across 3 lines of business including Wind Mobile, Bayer Crop Science
-and Boehringer Ingelheim.
-Founding member of the creative technologist working group, tasked with researching tech
-solutions for client business needs. These projects included product conception, installations
-and mobile applications.
-            </li>
-          </ul>
-          <h3>Other experience</h3>
-          <ul>
-            <li>
-              Virgin Mobile Canada. (Toronto, ON)
-Senior FrontEnd
-Developer, Marketing Group – Feb 2011 Apr.
-2012
-            </li>
-            <li>
-              Sonic Boom Creative Media. (Toronto, ON)
-FrontEnd
-Developer – May 2009 Feb
-2011
-            </li>
-            <li>
-              Kaboose Inc. (Toronto, ON)
-Contract FrontEnd
-Developer – March 2009May2009
-            </li>
-            <li>
-              Element 42 Design. ( Montreal, QC)
-Web Designer / Developer – July 2006 – March 2009
-            </li>
-          </ul>
-        </section>
-        <section class="large-6 columns text-center">
-          <h2>EDUCATION</h2>
-          <p>Bachelor of Arts May 2007 Concordia University, Montreal, QC</p>
-        </section>
-      </div>
+
     </main>
     <script src="scripts/vendor.js"></script>
     <script src="scripts/main.js"></script>
