Refresh of my portfolio site to play with new techniques

--- a/index.html
+++ b/index.html
@@ -1,106 +1,102 @@
 <!doctype html>
-<html lang="en">
-  <head>
+<html class="no-js" lang="en" xmlns:og="http://opengraphprotocol.org/schema/" xmlns:fb="http://www.facebook.com/2008/fbml" xmlns:website="http://ogp.me/ns/website" itemscope itemtype="http://schema.org/WebPage">
+
+<head>
+  <base href="">
     <meta charset="utf-8">
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width,initial-scale=1">
-    <title>Developer | Dennis Fagan</title>
+    <title>Dennis Fagan</title>
     <link rel="apple-touch-icon" href="apple-touch-icon.png">
 
-    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
-    <link rel="stylesheet" href="styles/vendor.css">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <!-- <link rel="shortcut icon" type="image/x-icon" href="https://assets.squarespace.com/universal/default-favicon.ico"/> -->
+    <link rel="canonical" href="https://dennistm.github.io"/>
+    <meta property="og:site_name" content="Dennis Fagan"/>
+    <meta property="og:title" content="Dennis Fagan"/>
+    <meta property="og:url" content="https://www.DennisFagan.com"/>
+    <meta property="og:type" content="website"/>
+    <meta itemprop="name" content="Dennis Fagan"/>
+    <meta itemprop="url" content="https://www.DennisFagan.com"/>
+    <meta name="twitter:title" content="Dennis Fagan"/>
+    <meta name="twitter:url" content="https://www.DennisFagan.com"/>
+    <meta name="twitter:card" content="summary"/>
+
+    <link rel="manifest" href="site.webmanifest">
+    <link rel="apple-touch-icon" href="icon.png">
+    <!-- Place favicon.ico in the root directory -->
+
+    <link rel="stylesheet" href="styles/normalize.css">
     <link rel="stylesheet" href="styles/main.css">
-  </head>
-  <body>
-    <main class="main-content" id="main-content">
-      <div class="portfolio-resume row">
+    <meta name="theme-color" content="#fafafa">
+</head>
 
-        <div class="large-4 columns">
-          <div class="portfolio-resume-wrapper">
-            <img class="portfolio-resume-headshot" src="images/0a84d20.jpg" alt="headshot">
-            <h3 class="portfolio-resume-header">Skills</h3>
-            <ul>
-              <li>Strong Javascript, JQuery and various MVC javascript frameworks</li>
-              <li>Advanced knowledge of HTML / HTML5 and CSS / CSS3.</li>
-              <li>Developed and Implemented new coding standards and practices.</li>
-              <li>Mentored junior staff and recent graduates.</li>
-              <li>Interviewed and hired junior and intermediate technical staff.</li>
-            </ul>
-          </div>
-        </div>
+<body>
+  <!--[if IE]>
+    <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="https://browsehappy.com/">upgrade your browser</a> to improve your experience and security.</p>
+  <![endif]-->
 
-        <div class="large-4 columns">
-          <div class="portfolio-resume-wrapper">
-            <h3 class="portfolio-resume-header">Experience</h3>
-            <div class="portfolio-resume-spacing">
-              <h5><strong>Critical Mass . (Toront o, ON)</strong></h5>
-              <p>Senior Developer – Oct. 2013 Present</p>
-              <ul>
-                <li>Senior developer on the GSDT line of business. This group is tasked with conceptualizing and prototyping the next generation of a major financial corporation’s products.</li>
-                <li>Developed the process to create live demos for clients in an iterative fashion using agile methodologies.</li>
-              </ul>
-            </div>
-            <div class="portfolio-resume-spacing">
-              <h5><strong>Maclaren McCann . (Toront o, ON)</strong></h5>
-              <p>Senior FrontEnd Developer / Creative Technologist – Apr. 2012 Oct. 2013</p>
-              <ul>
-                <li>Senior front end developer across 3 lines of business including Wind Mobile, Bayer Crop Science and Boehringer Ingelheim.</li>
-                <li>Founding member of the creative technologist working group, tasked with researching tech</li>
-                <li>solutions for client business needs. These projects included product conception, installations and mobile applications.</li>
-              </ul>
-            </div>
-
-            <div class="portfolio-resume-spacing">
-              <h5><strong>Other experience</strong></h5>
-              <ul>
-                <li>
-                  Virgin Mobile Canada. (Toronto, ON)
-    Senior FrontEnd
-    Developer, Marketing Group – Feb 2011 Apr.
-    2012
-                </li>
-                <li>
-                  Sonic Boom Creative Media. (Toronto, ON)
-    FrontEnd
-    Developer – May 2009 Feb
-    2011
-                </li>
-                <li>
-                  Kaboose Inc. (Toronto, ON)
-    Contract FrontEnd
-    Developer – March 2009May2009
-                </li>
-                <li>
-                  Element 42 Design. ( Montreal, QC)
-    Web Designer / Developer – July 2006 – March 2009
-                </li>
-              </ul>
-            </div>
-          </div>
-        </div>
-
-        <div class="large-4 columns">
-          <div class="portfolio-resume-wrapper">
-            <h3 class="portfolio-resume-header">About Me</h3>
-            <p>Javascript, HTML5, CSS3, jQuery, Backbone, Angular, Ember, Ionic, Web Standards, Responsive Design, Rapid Prototyping</p>
-            <h3 class="portfolio-resume-header">Education</h3>
-            <p>Bachelor of Arts May 2007 Concordia University, Montreal, QC</p>
-            <div class="portfolio-resume-contact-info">
-              <a href="mailto:dennis.jude@gmail.com?subject=I saw your profile on github&body=Hey Dennis,"><i class="fa fa-envelope" aria-hidden="true"></i>dennis.jude@gmail.com</a>
-            </div>
-            <div class="portfolio-resume-contact-info">
-              <a href="tel:+14083410600"><i class="fa fa-phone" aria-hidden="true"></i></i>555.555.5555</a>
-            </div>
-            <div class="portfolio-resume-contact-info">
-              <a href="https://www.linkedin.com/in/dennistm"><i class="fa fa-linkedin" aria-hidden="true"></i></i>Linkedin</a>
-            </div>
-          </div>
-        </div>
-
+  <main class="main-content" id="main-content">
+    <header class="section section--intro">
+      <div class="container">
+        <h1>Dennis Fagan</h1>
+        <ul class="menu section--intro__menu">
+          <li><a href="mailto:dennis.jude@gmail.com?subject=I saw your profile on github&amp;body=Hey Dennis,"><i class="icon icon-envelope" aria-hidden="true"></i><span class="visuallyhidden">dennis.jude@gmail.com</span></a></li>
+          <li><a href="https://www.linkedin.com/in/dennistm"><i class="icon icon-linkedin" aria-hidden="true"></i><span class="visuallyhidden">Linkedin</span></a></li>
+        </ul>
+        <p class="section--intro__source">Photo by <a href="https://unsplash.com/@paramir">Ehud Neuhaus</a> on Unsplash</p>
       </div>
+    </header>
+    <section class="section section--resume">
+      <div class="container">
+        <h2>Experience</h2>
+        <div class="portfolio-resume-spacing">
+          <h3>IGM Financial</h3>
+          <h4>Senior Manager</h4>
+          <p>Sept. 2016 - Present <em>Toronto, ON</em></p>
+          <p>Development lead on a team ranging between 6 and 11, reporting to the Technical Director. Part of the agile transformation team - a pilot project within the organization to move towards an agile workflow. Managed vendor teams during short term, high risk project work and for BAU tasks. Brought in automated workflows to assist in the continuous integration of the team’s work.</p>
+        </div>
+        <div class="portfolio-resume-spacing">
+          <h3>Critical Mass</h3>
+          <h4>Team Lead / Senior Developer</h4>
+          <p>Oct. 2013 August 2016 <em>Toronto, ON</em></p>
+          <p>Senior developer on the GSDT line of business. This group is tasked with conceptualizing and prototyping the next generation of a major financial corporation’s products. Developed the process to create live demos for clients in an ongoing fashion using agile methodologies.</p>
+        </div>
+        <div class="portfolio-resume-spacing">
+          <h3>Maclaren McCann</h3>
+          <h4>Senior Frontend Developer / Creative Technologist</h4>
+          <p>Apr. 2012 - Oct. 2013 <em>Toronto, ON</em></p>
+          <p>Senior front end developer across 3 lines of business including Wind Mobile, Bayer Crop Science and Boehringer Ingelheim. Founding member of the creative technologist working group, tasked with researching tech solutions for client business needs. These projects included product conception, installations and mobile applications.</p>
+        </div>
+      </div>
+    </section>
 
-    </main>
-    <script src="scripts/vendor.js"></script>
-    <script src="scripts/main.js"></script>
-  </body>
+    <section class="section section--resume-other">
+      <div class="container">
+        <h2>Other experience</h2>
+        <ul>
+          <li>Virgin Mobile Canada. Senior Frontend Developer, Feb 2011 - Apr. 2012</li>
+          <li>Sonic Boom Creative Media. Frontend Developer, May 2009 - Feb 2011</li>
+          <li>Freelance Developer. July 2006 – May 2009</li>
+        </ul>
+      </div>
+    </section>
+
+    <section class="section section--portrait">
+      <div class="container">
+        <img class="section--portrait__image" src="images/0a84d20.jpg" alt="Dennis Fagan">
+      </div>
+    </section>
+
+  </main>
+  <footer>
+    <div class="container">
+      <p><small>&copy 2020 all rights reserved.</small></p>
+    </div>
+  </footer>
+  <script src="scripts/main.js"></script>
+</body>
+
 </html>
